# fps-project

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt  run_tests.sh  setup_environment.sh
src/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  main.cpp
src/audio/: Audio.cpp  Audio.h  CMakeLists.txt
test/: CMakeLists.txt  run_tests.sh
test/audio/: CMakeLists.txt  tst_audioDecoder.cpp
