add_library(audio
    Audio.h
    Audio.cpp)

target_link_libraries(audio PRIVATE CONAN_PKG::ffmpeg)


function(add_option option)
    if(${option})
        target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE "${option}")
    endif()
endfunction()

add_option(WITH_POSTPROC)
add_option(WITH_OPENJPEG)
add_option(WITH_OPENH264)
add_option(WITH_FREETYPE)
add_option(WITH_VAAPI)
add_option(WITH_VDPAU)
add_option(WITH_VORBIS)
add_option(WITH_XCB)
add_option(WITH_APPKIT)
add_option(WITH_AVFOUNDATION)
add_option(WITH_AUDIOTOOLBOX)
add_option(WITH_VIDEOTOOLBOX)
add_option(WITH_SECURETRANSPORT)
add_option(WITH_OPENSSL)
add_option(WITH_OPUS)
add_option(WITH_ZMQ)
add_option(WITH_ALSA)
add_option(WITH_PULSE)
add_option(WITH_SDL2)
add_option(WITH_X264)
add_option(WITH_X265)
add_option(WITH_VPX)
add_option(WITH_MP3LAME)
add_option(WITH_FDK_AAC)
add_option(WITH_QSV)
add_option(WITH_WEBP)
